[package]
name = "corken"
version = "0.1.0"
edition = "2018"

[dependencies]
cfg-if = "1.0.0"
csv = "1.1.6"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = "1.0.29"
rand = "0.8.4"
ahash = "0.7.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_single_engine"
harness = false
